<resources>
    <string name="app_name" translatable="false">ShopApp</string>
    <string name="shop_app" translatable="false">Shop App</string>
    <string name="cart">Cart</string>
    <string name="filters">Filters</string>
    <string name="category">Category</string>
    <string name="smartphone">Smartphone</string>
    <string name="tablet">Tablet</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="samsung">Samsung</string>
    <string name="xiaomi">Xiaomi</string>
    <string name="huawei">Huawei</string>
    <string name="nokia">Nokia</string>
    <string name="sort">Sort</string>
    <string name="samsung_galaxy_s23_ultra_gray">Samsung Galaxy S23 Ultra Gray</string>
    <string name="settings">Settings</string>
    <string name="navigation_drawer_open" translatable="false">Navigation Drawer Open</string>
    <string name="navigation_drawer_close" translatable="false">Navigation Drawer Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="logout">Logout</string>
    <string name="products">Products</string>
    <string name="new_product">New product</string>
    <string name="profile">Profile</string>
    <!-- Strings related to login -->
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="language">Language</string>
    <string name="musicSwitch">Background music</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_new">New</string>
    <string name="autosync_problem">Automatic Sync problem</string>
    <string name="no_internet">Bad news, no internet connection</string>
    <string name="autosync_warning">Automatic Sync warning</string>
    <string name="connect_to_wifi">Please connect to wifi to sync data</string>
    <string name="autosync">Automatic Sync</string>
    <string name="good_news_sync">Good news, everything is sync now.</string>
    <string name="new_comments">New comments</string>
    <string name="new_">New</string>
    <string name="turn_wifi_on">Turn wifi on</string>
    <string name="avatar">avatar</string>
    <string name="user">User</string>
    <string name="channel_name">Notification channel</string>
    <string name="channel_description">Description</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="add_item">Add</string>
    <string name="edit_item">Edit</string>
    <string name="remove_item">Remove</string>
    <string name="save_item">Save</string>
    <string name="cancel_item">Cancel</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="places">Places</string>
    <string name="error">Error</string>
    <string name="set_as_main">Set as main</string>
    <string name="notifications">Notifications</string>
    <string name="sync_data">Sync data</string>
    <string name="home_long">Map</string>
    <string name="places_long">Places to review</string>
    <string name="preferences_long">Change your preferences</string>
    <string name="about_long">Get to know about us</string>
    <string name="sync_data_long">Sync data from the repo</string>
    <string name="location_disabled_message">Your Locations seems to be disabled, do you want to enable it?</string>
    <string name="oops">Ooops</string>
    <string name="sure">Sure</string>
    <string name="no">No</string>
    <string name="view_profile">View Profile</string>
    <string name="second_activity">SECOND ACTIVITY</string>
    <string name="title_activity_detail">Detail</string>
    <string name="pref_sync_title">Allow Sync</string>
    <string name="pref_sync_summ">Allow app to sync data automatically, when wifi is avalible</string>
    <string name="pref_syncConnectionType">Sync interval</string>
    <string name="pref_radiusConnectionType">Radius lookup</string>
    <string name="pref_sync_list">pref_sync_list</string>
    <string name="pref_radius">pref_radius</string>
    <string name="pref_sync">pref_sync</string>
    <string name="notif_on_sync_key">notif_on_sync</string>
    <string name="turn_notif_on">Stop notification</string>
    <string name="pref_file">pref_file</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm_new_pr">Confirm</string>
    <string name="contacts">Contacts</string>
    <string name="enter_product_description">Enter product description</string>
    <string name="enter_product_name">Enter product name</string>
    <string name="magnetic_field">Magnetic field:</string>
    <string name="non_gravity_accelerometer">Non-gravity accelerometer:</string>
    <string name="accelerometer">Accelerometer:</string>
    <string name="proximity_sensor">Proximity sensor:</string>
    <string name="gyroscope">Gyroscope:</string>
    <string name="sensors">Sensors</string>
    <string name="android_audio_recording_application">Recording and reproducing audio</string>
    <string name="stop">Stop</string>
    <string name="play">Play</string>
    <string name="start">Start</string>
    <string name="reset">Reset</string>
    <string name="image">IMAGE</string>
</resources>